Mon Mar 14 19:39:33 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/timer.rb (TkTimer): forgot to clear @return_value
	  when restarting

	* ext/tk/lib/tk/sample/cd_timer.rb: new sample of TkRTTimer

Mon Mar 14 12:21:03 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/timer.rb (TkRTTimer): forgot to reset the callback
	  time. So, 'continue' do all callbacks between 'stop' and 'continue'.

Mon Mar 14 00:13:49 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/timer.rb (TkRTTimer): correct calculation of offset
	  value. get a little better accuracy. 

	* ext/tk/sample/demos-en/widget: use a binding with no local variables 
	  when eval a sample script.

	* ext/tk/sample/demos-en/bind.rb: ditto.

	* ext/tk/sample/demos-en/tcolor: ditto.

	* ext/tk/sample/demos-jp/widget: ditto.

	* ext/tk/sample/demos-jp/bind.rb: ditto.

	* ext/tk/sample/demos-jp/tcolor: ditto.

Sun Mar 13 10:04:17 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb: remove test_gc. [ruby-dev:25871]

Thu Mar 10 19:12:06 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (lib_eventloop_ensure): mis-delete a timer
	  handler when exit from a recursive called eventloop

	* ext/tk/lib/tk/timer.rb: new TkRTTimer class, which can works for a
	  realtime operation

	* ext/tk/sample/tkrttimer.rb: sample of TkRTTimer class

	* ext/tk/lib/tk/textmark.rb: move  TkTextMark#+ and TkTextMark#- to 
	  TkText::IndexModMethods

	* ext/tk/lib/tk/text.rb: improve TkTextMark#+ and TkTextMark#-, and 
	  add them to TkText::IndexModMethods module

	* ext/tk/sample/tktextio.rb: add test part of "seek by text index
	  modifiers"

Wed Mar  9 20:25:58 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_ssl.c (ossl_start_ssl, ossl_ssl_write): call
	  rb_sys_fail if errno isn't 0. [ruby-dev:25831]

	* ext/openssl/lib/openssl/cipher.rb: fix typo. [ruby-dev:24285]
